syntax = "proto3";

package tss;
option go_package = "tss-demo/proto";

service TSSService {
  rpc Exchange(stream TSSMessage) returns (stream TSSMessage) {}
  rpc StartKeyGen(KeyGenRequest) returns (KeyGenResponse) {}
  rpc StartSign(SignRequest) returns (SignResponse) {}
}

message TSSMessage {
  uint32 from = 1;
  uint32 to = 2;
  bool broadcast = 3;
  bytes payload = 4;
  string session_id = 5;
}

message KeyGenRequest {
  int32 threshold = 1;
  repeated uint32 party_ids = 2;
  string session_id = 3;
}

message KeyGenResponse {
  bool success = 1;
  string error = 2;
  string session_id = 3;
}

message SignRequest {
  bytes message = 1;
  repeated uint32 party_ids = 2;
  string session_id = 3;
}

message SignResponse {
  bool success = 1;
  string error = 2;
  string session_id = 3;
}